# airbnb-etl-pipeline

./: .gitignore  README.md  pyproject.toml
airbnb_airflow/: docker-compose.yaml
airbnb_airflow/config/: airflow.cfg
airbnb_airflow/dags/: airflow_dag.py
airbnb_dbt/: dbt_project.yml  dockerfile
airbnb_dbt/models/marts/core/: dim_host_scd2.sql  dim_listing_scd2.sql  dim_neighbourhood.sql  fact_listing_snapshot.sql  schema.yml
airbnb_dbt/models/source/: sources.yml
airbnb_dbt/models/staging/: idemp_airbnb_listings_raw.sql  schema.yml  stg_airbnb_listings.sql
airbnb_dbt/profiles/: profiles.yml
airbnb_dbt/snapshots/: airbnb_host_snapshot.sql  airbnb_listing_snapshot.sql  schema.yml
airbnb_etl/airbnb_data/: 2024_Q4_airbnb_berlin.csv  2025_Q1_airbnb_berlin.csv  2025_Q2_airbnb_berlin.csv  2025_Q3_airbnb_berlin.csv
airbnb_etl/dataflow_job/: .dockerignore  dockerfile  main.py  options.py  requirements.txt  test_main.ipynb
airbnb_etl/dataflow_job/domain/: airbnb_data_class.py  airbnb_mapper_func.py  airbnb_val_func.py
airbnb_etl/dataflow_job/domain/exception/: __init__.py  validation_exception.py
infra/beam/schemas/: stg_airbnb_listings.json
infra/bigquery/SQL_skripts/: create_stg_airbnb_listings.sql
infra/bigquery/skripts/: build_staging_bq_table.sh
infra/setup/: bootstrap_pipeline.sh
