[project]
name = "airbnb-etl"
version = "0.1.0"
description = "ETL pipeline for Airbnb Europe using GCS, BigQuery, and Cloud Run"
authors = [
    {name = "Falk"}
]
readme = "README.md"
package-mode = false
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "gcsfs (>=2025.10.0,<2026.0.0)",
    "google-cloud-bigquery (>=3.38.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "apache-beam[gcp] (>=2.69.0,<3.0.0)",
    "dbt-bigquery (>=1.10.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
